@@ -1,3 +1,9 @@
+2011-10-10  Uros Bizjak  <ubizjak@gmail.com>
+
+	* optabs.h (DOI_vec_perm): Rename from OTI_vec_perm.  Move from enum
+	optab_index to enum direct_optab_index.
+	(vec_perm_optab): Update.
+
 2011-10-10  Anatoly Sokolov  <aesok@post.ru>
 
 	* config/cris/cris.c (cris_preferred_reload_class): New function.
